tests/NormalTests/paczka1/small_fuzzy/57240228.err
Error in line 6: w8FR7Z S416 51,76
Error in line 8: w8FR7Z S416 206,4
Error in line 11: w8FR7Z A288 3,2
Error in line 1: XgHhcf A288 68,7
